aurora/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: backoffice
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: backoffice
    spec:
      containers:
        - name: backoffice
          image: ghcr.io/gewis/aurora/backoffice:2.16.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/data/posters
              name: posters
            - mountPath: /usr/src/app/data/local-posters
              name: local-posters
            - mountPath: /usr/src/app/data/audio
              name: audio
      volumes:
        - name: posters
          persistentVolumeClaim:
            claimName: posters
        - name: local-posters
          persistentVolumeClaim:
            claimName: local-posters
        - name: audio
          persistentVolumeClaim:
            claimName: audio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: client
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: client
    spec:
      containers:
        - name: client
          image: ghcr.io/gewis/aurora/client:2.16.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              name: 80tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /usr/src/app/data/posters
              name: posters
            - mountPath: /usr/src/app/data/local-posters
              name: local-posters
            - mountPath: /usr/src/app/data/audio
              name: audio
      volumes:
        - name: posters
          persistentVolumeClaim:
            claimName: posters
        - name: local-posters
          persistentVolumeClaim:
            claimName: local-posters
        - name: audio
          persistentVolumeClaim:
            claimName: audio
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: core
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: core
    spec:
      containers:
        - name: core
          image: ghcr.io/gewis/aurora/core:2.16.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: 3000tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/public/posters
              name: posters
            - mountPath: /app/public/local-posters
              name: local-posters
            - mountPath: /app/public_copy/audio
              name: audio
            - mountPath: /app/private
              name: private
      dnsConfig:
        options:
          - name: ndots
            value: '1'
      volumes:
        - name: posters
          persistentVolumeClaim:
            claimName: posters
        - name: local-posters
          persistentVolumeClaim:
            claimName: local-posters
        - name: audio
          persistentVolumeClaim:
            claimName: audio
        - name: private
          persistentVolumeClaim:
            claimName: private
