aurora/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backoffice
spec:
  selector:
    io.kompose.service: backoffice
  ports:
    - name: '9800'
      port: 9800
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    io.kompose.service: client
  ports:
    - name: '9801'
      port: 9801
      protocol: TCP
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: core
spec:
  selector:
    io.kompose.service: core
  ports:
    - name: '3000'
      port: 3000
      protocol: TCP
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: info
spec:
  selector:
    io.kompose.service: info
  ports:
    - name: '8082'
      port: 8082
      protocol: TCP
      targetPort: 8082
