aurora/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurora
  namespace: aurora-prod
spec:
  ingressClassName: traefik
  rules:
    - host: aurora.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: backoffice
                port:
                  number: 9800
            path: /
            pathType: Prefix
          - backend:
              service:
                name: core
                port:
                  number: 3000
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: core
                port:
                  number: 3000
            path: /socket.io
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurora-client
  namespace: aurora-prod
spec:
  ingressClassName: traefik
  rules:
    - host: aurora-client.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: client
                port:
                  number: 9801
            path: /
            pathType: Prefix
          - backend:
              service:
                name: core
                port:
                  number: 3000
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: core
                port:
                  number: 3000
            path: /socket.io
            pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aurora-info
  namespace: aurora-prod
spec:
  ingressClassName: traefik
  rules:
    - host: info.gewis.nl
      http:
        paths:
          - backend:
              service:
                name: info
                port:
                  number: 8082
            path: /
            pathType: Prefix
